penyesuaian lanjutan
