# app/Http/Controllers/API/AuthenticationAPIController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Authenticate\AuthenticateAPIRequest;
+use App\Http\Requests\User\CreateUserAPIRequest;
 use App\Models\Tenant\Business;
 use App\Models\User;
 use App\Repositories\AuthenticationRepository;
@@ -53,6 +54,47 @@ class AuthenticationAPIController extends Controller
     public function authenticate(AuthenticateAPIRequest $request, AuthenticationRepository $repository)
     {
         return $repository->authenticate($request->all());
+    }
+
+    /**
+     * @return Response
+     *
+     * @OA\Post(
+     *      path="/api/authentication/register",
+     *      summary="Create User",
+     *      tags={"Authentication"},
+     *      description="Create User",
+     *      @OA\Parameter(
+     *          name="body",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="name",
+     *                  type="string",
+     *                  example="me"
+     *              ),
+     *              @OA\Property(
+     *                  property="email",
+     *                  type="string",
+     *                  example="me@tobfa.id"
+     *              ),
+     *              @OA\Property(
+     *                  property="password",
+     *                  type="string",
+     *                  example="123456"
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *      )
+     * )
+     */
+    public function register(CreateUserAPIRequest $request, AuthenticationRepository $repository){
+        return $repository->register($request->all());
     }
 
     /**
